--- a/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
+++ b/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
@@ -1622,6 +1622,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Dataset Size:** 4,572 rows and 4 columns. Each row represents a unique observation, capturing different marketing factors and their impact. The dataset includes variables related to promotional strategies, budget allocations, and resulting sales, providing insights into the effectiveness of various marketing approaches."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Descriptive Statistics for Independent Variables** \n",
     "\n",
     "There are three continuous independent variables: `TV`, `Radio`, and `Social_Media`. To understand how heavily the business invests in each promotion type, I will use `describe()` to generate descriptive statistics for these three variables."
@@ -3173,13 +3180,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The average `Sales` for **High** `TV` promotions (**300.52**) is significantly higher than for **Medium** (**199.02**) and **Low** (**91.64**).  \n",
+    "- The average `Sales` for **High** `TV` promotions (**300.53**) is significantly higher than for **Medium** (**199.02**) and **Low** (**91.72**).  \n",
     "  - This **high variability** in mean sales across categories suggests that `TV` is likely a **strong predictor** of `Sales`.  \n",
     "\n",
     "- The `Influencer` variable shows **less variability** in mean sales across its categories.  \n",
     "  - This suggests that `Influencer` is a **weaker predictor** of `Sales`.  \n",
     "\n",
-    "These observations provide an **initial indication** of variable importance, which can be further analyzed when fitting the multiple linear regression model.  "
+    "These observations provide an **initial indication** of variable importance, which can be further analyzed when fitting the multiple linear regression model."
    ]
   },
   {
@@ -3651,8 +3658,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "### **Interpretation of Results**  \n",
     "\n",
     "The **R-squared** value indicates how much of the variation in **Sales** is explained by the model. A higher R-squared suggests a better fit. I will also analyze the **beta coefficients** and their **p-values** to understand the relationships between the predictor variables and `Sales`.  \n",
@@ -3663,7 +3668,7 @@
     "  - This means that **90.0% of the variation in `Sales`** is explained by the model, indicating a strong fit.  \n",
     "- **Adj. R-squared: 0.899**  \n",
     "  - The adjusted R-squared is very close to the R-squared value, suggesting that the model is not overfitting and that adding more predictors would not significantly improve the model.  \n",
-    "- **F-statistic: 1184** (p-value ≈ 1.20e-196)  \n",
+    "- **F-statistic: 1184** (p-value = **1.20e-196**)  \n",
     "  - A high F-statistic with a near-zero p-value confirms that the model is **statistically significant**, meaning that at least one predictor is strongly related to `Sales`.  \n",
     "\n",
     "\n",
@@ -3715,7 +3720,7 @@
     "  - 95% Confidence Interval: **[2.50, 3.48]**  \n",
     "  - For every **one-unit increase in `Radio` spending**, `Sales` increase by approximately **2.99 units**, with the true effect likely between **2.50 and 3.48**.  \n",
     "\n",
-    "Since **none of the confidence intervals include zero**, all predictors have a **statistically significant** effect on `Sales`."
+    "Since **none of the confidence intervals include zero**, all predictors have a **statistically significant** effect on `Sales`.  \n"
    ]
   },
   {
@@ -3951,30 +3956,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interpretation of Results\n",
     "\n",
-    "### Test Set Performance Interpretation\n",
+    "### **Interpretation of Results**  \n",
     "\n",
-    "The model achieved an R² of **0.89**, indicating that approximately **89%** of the variance in sales is explained by the model. This suggests strong predictive performance.\n",
+    "### **Test Set Performance Interpretation**  \n",
     "\n",
-    "- The **Mean Absolute Error (MAE)** of **18.5 million dollars** suggests that, on average, predictions deviate from actual sales by around **18.5 million dollars**.\n",
-    "- The **Mean Squared Error (MSE)** of **525.7 million dollars** penalizes larger errors more heavily.\n",
-    "- The **Root Mean Squared Error (RMSE)** of **22.93 million dollars** provides a more interpretable metric, indicating that most predictions fall within **±22.93 million dollars** of the actual sales.\n",
+    "The model achieved an **R² of 0.9118**, meaning that approximately **91.18%** of the variance in the dependent variable is explained by the model. This indicates strong predictive performance.  \n",
     "\n",
-    "### Residual Analysis\n",
+    "- The **Mean Absolute Error (MAE)** of **23.63 grams** suggests that, on average, predictions deviate from actual values by around **23.63 grams**.  \n",
+    "- The **Mean Squared Error (MSE)** of **785.99 grams** penalizes larger errors more heavily.  \n",
+    "- The **Root Mean Squared Error (RMSE)** of **28.04 grams** provides a more interpretable metric, suggesting that most predictions fall within **±28.04 grams** of the actual values.  \n",
     "\n",
-    "- The **residuals vs. predicted values plot** does not show a clear pattern, suggesting that errors are randomly distributed. This indicates that the model's assumptions hold and there is no major systematic bias.\n",
-    "- The **residual histogram** resembles a normal distribution, which supports the assumption of homoscedasticity (consistent variance of errors). The presence of normality further validates the model’s reliability.\n",
+    "### **Residual Analysis**  \n",
     "\n",
-    "### Actual vs. Predicted Sales Plot\n",
+    "- The **residuals vs. predicted values plot** should be checked for randomness to confirm that errors are randomly distributed, supporting the assumption that the model is well-fitted.  \n",
+    "- The **residual histogram** should ideally resemble a normal distribution to validate the assumption of homoscedasticity (consistent variance of errors).  \n",
     "\n",
-    "- The data points closely follow the diagonal line, indicating strong predictive accuracy.\n",
-    "- Some dispersion exists, particularly for higher sales values, but there is no extreme bias.\n",
-    "- The model effectively captures the relationship between actual and predicted sales.\n",
+    "### **Actual vs. Predicted Plot**  \n",
     "\n",
-    "### Observation\n",
+    "- If a scatterplot of actual vs. predicted values is provided, points closely following the diagonal line would indicate strong predictive accuracy.  \n",
+    "- Some dispersion may exist, but as long as no systematic bias is visible, the model effectively captures the relationship between input features and the dependent variable.  \n",
     "\n",
-    "The model demonstrates strong predictive performance with a high R² value and low MAE/RMSE, confirming that it generalizes well to unseen data. The residuals show no significant violations of assumptions, reinforcing confidence in the model’s reliability. However, slight deviations in higher sales values suggest that further refinements might be beneficial for optimizing predictions in those ranges."
+    "### **Observation**  \n",
+    "\n",
+    "The model exhibits **strong predictive performance** with a high **R² value (0.9118)** and **low MAE/RMSE**, confirming that it generalizes well to unseen data. The residuals should be further analyzed to ensure no violations of model assumptions, but overall, the model appears to be **reliable and accurate**.  \n"
    ]
   },
   {
@@ -4394,14 +4399,17 @@
    "metadata": {},
    "source": [
     "#### **Findings:**\n",
-    "The assumption is met in the current model.  \n",
+    "The multicollinearity assumption is adequately met in the current model.  \n",
     "\n",
-    "- Since only **one continuous independent variable** (`Radio`) is included, **multicollinearity is not an issue**.  \n",
-    "- However, if both `Radio` and `Social Media` were used as predictors, there would be **moderate multicollinearity**, as indicated by:  \n",
-    "  - The **pairplot**, which shows a linear relationship between `Radio` and `Social Media`.  \n",
-    "  - The **Variance Inflation Factor (VIF)**, which is **4.93** for both variables, suggesting high collinearity.  \n",
+    "- With only **one continuous independent variable** (`Radio`) included in the final model, multicollinearity is inherently avoided.  \n",
+    "- The VIF analysis reveals that if both `Radio` and `Social Media` were included as predictors:  \n",
+    "  - Both variables exhibit **moderate multicollinearity**, with identical VIF values of **4.93**  \n",
+    "  - This aligns with the **pairplot** showing a visible linear relationship between `Radio` and `Social Media` budgets  \n",
+    "  - While not extreme (VIF < 5), this correlation could inflate coefficient variances if both were retained  \n",
     "\n",
-    "Thus, **excluding `Social Media` helps maintain the no multicollinearity assumption** in the model.  \n"
+    "This selective approach optimizes the model's interpretability while meeting regression assumptions. The VIF values confirm that including either `Radio` or `Social Media` alone (as done in the final model) eliminates multicollinearity concerns.  \n",
+    "\n",
+    "*(Note: VIF > 10 would indicate severe multicollinearity; values between 5-10 suggest moderate correlation worth monitoring)*"
    ]
   },
   {
@@ -4568,8 +4576,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Interpreting the R-Squared Value**\n",
-    "The model has an **R-squared value of 0.904**, meaning it explains **90.4% of the variance** in `Sales`.  \n",
+    "### **Interpreting the R-Squared Value**\n",
+    "The model has an **R-squared value of 0.900**, meaning it explains **90.0% of the variance** in `Sales`.  \n",
     "\n",
     "- This indicates that the **independent variables (`TV` and `Radio`) effectively predict `Sales`**.  \n",
     "- A high **R-squared** suggests that a **significant proportion of the variability** in `Sales` is accounted for by the model.  \n",
@@ -4586,10 +4594,10 @@
     "\n",
     "When `TV` and `Radio` are used to predict `Sales`, the model coefficients are:\n",
     "\n",
-    "* $\\beta_{0} =  218.5261$\n",
-    "* $\\beta_{TVLow}= -154.2971$\n",
-    "* $\\beta_{TVMedium} = -75.3120$\n",
-    "* $\\beta_{Radio} =  2.9669$\n",
+    "* $\\beta_{0} =  212.3307$\n",
+    "* $\\beta_{TVLow}= -148.6453 $\n",
+    "* $\\beta_{TVMedium} = -72.1933$\n",
+    "* $\\beta_{Radio} =  2.9893$\n",
     "\n",
     "#### Relationship between `Sales` and the independent variables as a linear equation\n",
     "\n",
@@ -4598,43 +4606,43 @@
     "\n",
     "$\\text{Sales} = \\beta_{0} + \\beta_{TVLow}*X_{TVLow}+ \\beta_{TVMedium}*X_{TVMedium}+ \\beta_{Radio}*X_{Radio}$\n",
     "\n",
-    "$\\text{Sales} = 218.5261 - 154.2971*X_{TVLow} - 75.3120*X_{TVMedium}+ 2.9669 *X_{Radio}$"
+    "$\\text{Sales} = 212.3307 - 148.6453*X_{TVLow} -72.1933*X_{TVMedium}+ 2.9893 *X_{Radio}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " \n",
     "\n",
-    "The estimated coefficients provide insights into the relationship between `TV` and `Radio` advertising budgets and `Sales`:  \n",
     "\n",
-    "#### **Interpretation of Coefficients:**  \n",
-    "- **Intercept ($\\beta_0 = 217.6367$):**  \n",
+    "The estimated coefficients provide insights into the relationship between `TV` and `Radio` advertising budgets and `Sales`.  \n",
+    "\n",
+    "### **Interpretation of Coefficients:**  \n",
+    "- **Intercept (β₀ = 212.3307):**  \n",
     "  - Represents the estimated `Sales` when the `TV` budget is in the `High` category (reference level) and the `Radio` budget is **0**.  \n",
-    "  - While mathematically valid, this scenario may not be realistic in practice.\n",
+    "  - While mathematically valid, this scenario may not be realistic in practice.  \n",
     "\n",
     "- **TV Advertising (Categorical Variable - Baseline: `High`)**:  \n",
-    "  - **$\\beta_1$ (`TV = Low` = -152.0897):**  \n",
-    "    - Holding all other factors constant, companies with a `Low` TV budget experience an **average sales drop of 152.08 million** compared to those with a `High` TV budget.  \n",
-    "  - **$\\beta_2$ (`TV = Medium` = -73.4835):**  \n",
-    "    - Companies with a `Medium` TV budget see an **average sales decrease of 73.48 million** compared to those in the `High` category.  \n",
+    "  - **β₁ (`TV = Low` = -148.6453):**  \n",
+    "    - Holding all other factors constant, companies with a `Low` TV budget experience an **average sales drop of 148.65 million** compared to those with a `High` TV budget.  \n",
+    "  - **β₂ (`TV = Medium` = -72.1933):**  \n",
+    "    - Companies with a `Medium` TV budget see an **average sales decrease of 72.19 million** compared to those in the `High` category.  \n",
     "\n",
     "- **Radio Advertising (Continuous Variable)**:  \n",
-    "  - **$\\beta_3$ (`Radio` = 2.8864):**  \n",
-    "    - For every **1 million increase** in the `Radio` budget, `Sales` are expected to **increase by 2.88 million**, assuming the `TV` budget category remains unchanged.  \n",
+    "  - **β₃ (`Radio` = 2.9893):**  \n",
+    "    - For every **1 million increase** in the `Radio` budget, `Sales` are expected to **increase by 2.99 million**, assuming the `TV` budget category remains unchanged.  \n",
     "\n",
-    "#### **Statistical Significance:**  \n",
+    "### **Statistical Significance:**  \n",
     "- All coefficients are **statistically significant**:  \n",
-    "  - **p-values = 0.000** for all predictors, meaning they are significant at **$p < 0.05$**.  \n",
+    "  - **p-values = 0.000** for all predictors, meaning they are significant at **p < 0.05**.  \n",
     "  - **Large t-statistics** confirm strong evidence against the null hypothesis (which assumes no effect on `Sales`).  \n",
     "\n",
-    "- **$95\\%$ Confidence Intervals (Example for `TV = Low`):**  \n",
-    "  - The **true effect of `TV = Low` on `Sales` is likely between** $[-163.979, -144.616]$.  \n",
+    "- **95% Confidence Intervals (Example for `TV = Low`)**:  \n",
+    "  - The **true effect of `TV = Low` on `Sales` is likely between** [-160.583, -136.708].  \n",
     "  - This reinforces that **lower TV budgets significantly reduce sales** compared to the `High` category.  \n",
     "\n",
-    "#### **Final Thought:**  \n",
-    "The results highlight that **TV advertising plays a crucial role** in driving `Sales`, with higher budgets leading to significantly **better performance**. `Radio` advertising also contributes positively, but at a **smaller scale** per unit increase in spending. These findings are statistically robust and provide actionable insights for **budget allocation** in marketing strategies.  \n"
+    "### **Final Thought:**  \n",
+    "The results highlight that **TV advertising plays a crucial role** in driving `Sales`, with higher budgets leading to significantly **better performance**. `Radio` advertising also contributes positively, but at a **smaller scale** per unit increase in spending. These findings are statistically robust and provide actionable insights for **budget allocation** in marketing strategies.  "
    ]
   },
   {
@@ -4696,15 +4704,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "### **Key Takeaways**  \n",
     "\n",
     "- **Impact of TV Promotion on Sales**: The categorical variable **TV** is a strong predictor of `Sales`, as evident from significant differences in mean sales across its categories. The regression results show that reducing TV promotional budgets leads to a **significant drop in sales**.  \n",
     "\n",
-    "- **Role of Radio Advertising**: **Radio promotions also positively impact sales**, showing a **strong linear relationship** with `Sales`. A **$1 million** increase in radio spending is associated with an estimated **$2.97 million increase in sales**.  \n",
+    "- **Role of Radio Advertising**: **Radio promotions also positively impact sales**, showing a **strong linear relationship** with `Sales`. A **$1 million** increase in radio spending is associated with an estimated **$2.99 million increase in sales**.  \n",
     "\n",
     "- **Model Performance & Statistical Significance**:  \n",
     "   - **All coefficients are statistically significant** with a **p-value of 0.000** at **p = 0.05**, confirming a strong relationship between `TV`, `Radio`, and `Sales`.  \n",
-    "   - The **confidence intervals** reinforce the reliability of these estimates. For example, the **95% confidence interval** for `Low TV` promotion suggests that the expected reduction in sales compared to `High TV` promotion lies between **-163.979 and -144.616**.  \n",
+    "   - The **confidence intervals** reinforce the reliability of these estimates. For example, the **95% confidence interval** for `Low TV` promotion suggests that the expected reduction in sales compared to `High TV` promotion lies between **-160.583 and -136.708**.  \n",
     "\n",
     "- **Exploratory Data Analysis (EDA) and Model Validation**:  \n",
     "   - **Scatterplots confirm linear relationships** between `Radio` and `Sales`.  \n",
@@ -4740,11 +4750,11 @@
     "To provide a clear, actionable summary to external stakeholders:  \n",
     "\n",
     "- **TV Promotion Budget Significantly Affects Sales**:  \n",
-    "   - Moving from **high to medium** TV promotion leads to an estimated **$75.31 million decrease in sales** (**95% CI: [-82.431, -68.193]**).  \n",
-    "   - Moving from **high to low** TV promotion results in a **$154.30 million drop in sales** (**95% CI: [-163.979, -144.616]**).  \n",
+    "   - Moving from **high to medium** TV promotion leads to an estimated **$72.19 million decrease in sales** (**95% CI: [-80.631, -63.755]**).  \n",
+    "   - Moving from **high to low** TV promotion results in a **$148.65 million drop in sales** (**95% CI: [-160.583, -136.708]**).  \n",
     "\n",
     "- **Radio Promotion Positively Impacts Sales**:  \n",
-    "   - A **$1 million increase in radio spending** is associated with a **$2.97 million increase in sales** (**95% CI: [2.551, 3.383]**).  \n",
+    "   - A **$1 million increase in radio spending** is associated with a **$2.99 million increase in sales** (**95% CI: [2.497, 3.481]**).  \n",
     "\n",
     "- **Strategic Recommendations**:  \n",
     "   - **TV advertising should be prioritized**, as reductions in TV spending lead to significant sales declines.  \n",
