--- a/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
+++ b/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
@@ -3811,7 +3811,7 @@
    "source": [
     "### Model Performance on Test Data\n",
     "\n",
-    "Now that I've trained and validated our model on the training data, I'll evaluate its performance on the unseen test data to assess how well it generalizes.\n"
+    "Now that I've trained and validated the model on the training data, I'll evaluate its performance on the unseen test data to assess how well it generalizes.\n"
    ]
   },
   {
@@ -3907,7 +3907,7 @@
    "source": [
     "### Residual Analysis on Test Set\n",
     "\n",
-    "We should also check if our model assumptions hold on the test data.\n"
+    "We should also check if the model assumptions hold on the test data.\n"
    ]
   },
   {
@@ -4761,9 +4761,9 @@
    "source": [
     "### **Introduction**\n",
     "\n",
-    "In this section, I will apply **K-means clustering** to analyze the marketing campaign data and uncover hidden performance patterns. As an unsupervised learning method, K-means groups similar campaigns based on their spending characteristics (TV, radio, social media) and sales outcomes, revealing natural segments in our marketing strategy. By examining how different budget allocations cluster together, I aim to identify high-performing campaign profiles that maximize sales.\n",
+    "In this section, I will apply **K-means clustering** to analyze the marketing campaign data and uncover hidden performance patterns. As an unsupervised learning method, K-means groups similar campaigns based on their spending characteristics (TV, radio, social media) and sales outcomes, revealing natural segments in the marketing strategy. By examining how different budget allocations cluster together, I aim to identify high-performing campaign profiles that maximize sales.\n",
     "\n",
-    "This approach will transform raw marketing data into actionable strategic segments, helping us allocate budgets more effectively and tailor campaigns to different customer response patterns. The clustering process will also enhance our understanding of how different media channels interact to drive sales performance."
+    "This approach will transform raw marketing data into actionable strategic segments, helping us allocate budgets more effectively and tailor campaigns to different customer response patterns. The clustering process will also enhance my understanding of how different media channels interact to drive sales performance."
    ]
   },
   {
