--- a/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
+++ b/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
@@ -55,7 +55,7 @@
     "- **TV**: The level of investment in TV advertisements (Low, Medium, High).  \n",
     "- **Radio**: The amount spent on radio promotions (in millions of dollars).  \n",
     "- **Social Media**: The budget allocated to social media marketing (in millions of dollars).  \n",
-    "- **Influencer**: The type of influencer used in the campaign (Micro, Macro, Mega).  \n",
+    "- **Influencer**: The type of influencer used in the campaign (Nano, Micro, Macro, Mega).  \n",
     "- **Sales**: The total revenue generated from the marketing campaign (in millions of dollars).  \n",
     "\n",
     "This dataset will be used to **analyze the impact of different marketing strategies on sales, build models to identify key drivers, and provide insights for optimizing marketing budgets.**"
