--- a/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
+++ b/Influencer_Impact_and_Marketing_Sales_Modeling_and_Analysis.ipynb
@@ -6410,7 +6410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Top Three Recommendations Based on Insights**  \n",
+    "# Top Three Recommendations Based on Insights\n",
     "\n",
     "1. **Prioritize High TV Advertising Budgets**: TV advertising has the strongest impact on sales, with high TV budgets generating significantly higher revenue than medium or low budgets. Allocating a larger portion of the marketing budget to high-impact TV campaigns will maximize sales growth.  \n",
     "\n",
